[package]
name = "nhl_notification_service_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.1"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "4.0.0"
tokio = "1.6.1"
reqwest = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
